<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_picker_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dp_15"
        android:gravity="center"
        android:textColor="@color/title_color"
        android:textSize="@dimen/sp_18"
        android:text="@string/select_date"
        tools:text="title" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_15">

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_48"
            android:layout_weight="1"
            android:background="@drawable/dialog_cancel_button_bg"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_48"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_weight="1"
            android:background="@drawable/dialog_sure_button_purple_bg"
            android:gravity="center"
            android:text="@string/sure"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18" />


    </LinearLayout>

</LinearLayout>
