<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:animateLayoutChanges="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/set_repetition"
            android:textColor="@color/main_color"
            android:textSize="@dimen/t2" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_15"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/every_day_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/main_color"
                android:text="@string/every_day"
                android:textColor="@color/title_color"
                android:textSize="@dimen/t4" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/every_week_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:buttonTint="@color/main_color"
                android:text="@string/every_week"
                android:textColor="@color/title_color"
                android:textSize="@dimen/t4" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/checkbox_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_10"
            android:orientation="horizontal"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/week_selector_bg"
                android:button="@null"
                android:gravity="center"
                android:text="一"
                android:textColor="@drawable/week_selector_text_color"
                android:textSize="@dimen/t4" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:background="@drawable/week_selector_bg"
                android:button="@null"
                android:gravity="center"
                android:text="二"
                android:textColor="@drawable/week_selector_text_color"
                android:textSize="@dimen/t4" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:background="@drawable/week_selector_bg"
                android:button="@null"
                android:gravity="center"
                android:text="三"
                android:textColor="@drawable/week_selector_text_color"
                android:textSize="@dimen/t4" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:background="@drawable/week_selector_bg"
                android:button="@null"
                android:gravity="center"
                android:text="四"
                android:textColor="@drawable/week_selector_text_color"
                android:textSize="@dimen/t4" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:background="@drawable/week_selector_bg"
                android:button="@null"
                android:gravity="center"
                android:text="五"
                android:textColor="@drawable/week_selector_text_color"
                android:textSize="@dimen/t4" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:background="@drawable/week_selector_bg"
                android:button="@null"
                android:gravity="center"
                android:text="六"
                android:textColor="@drawable/week_selector_text_color"
                android:textSize="@dimen/t4" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:background="@drawable/week_selector_bg"
                android:button="@null"
                android:gravity="center"
                android:text="日"
                android:textColor="@drawable/week_selector_text_color"
                android:textSize="@dimen/t4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/dp_25"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_15"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/main_color"
                android:textSize="@dimen/t3" />

            <TextView
                android:id="@+id/sure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_30"
                android:text="@string/sure"
                android:textColor="@color/main_color"
                android:textSize="@dimen/t3" />
        </LinearLayout>
    </LinearLayout>
</layout>