<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.jal.todo.module.timer.TimerViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:orientation="horizontal">

            <include
                android:id="@+id/title_layout"
                layout="@layout/title_layout"
                app:viewModel="@{viewModel.toolbarViewModel}" />

            <ImageButton
                android:layout_width="@dimen/dp_45"
                android:layout_height="@dimen/dp_45"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/dp_5"
                android:background="@null"
                android:padding="@dimen/dp_10"
                android:scaleType="fitXY"
                android:src="@drawable/focus_record"
                app:onClickCommand="@{viewModel.recordCommand}" />
        </FrameLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/next_task_en"
            android:textColor="@color/subtitle_color"
            android:textSize="@dimen/t2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_15"
            android:text="当前执行任务"
            android:textColor="@color/black"
            android:textSize="@dimen/t1"
            android:textStyle="bold" />

        <com.jal.todo.widget.CountDownView
            android:id="@+id/count_down_view"
            android:layout_width="@dimen/dp_250"
            android:layout_height="@dimen/dp_250"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_25"
            app:progress_ring_color="@color/main_color"
            app:radius="@dimen/dp_110"
            app:ring_color="@color/gray_20"
            app:ring_width="@dimen/dp_5"
            app:start="@{viewModel.startTime}"
            app:text_color="@color/countdown_text_color"
            app:text_size="@dimen/sp_32" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_15"
            android:text="专注25分钟"
            android:textColor="@color/describe_color"
            android:textSize="@dimen/t5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_5"
            android:autoLink="all"
            android:text="@string/understand_focus"
            android:textColor="@color/title_color"
            android:textSize="@dimen/t4" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/dp_35"
            android:background="@drawable/time_start_button"
            android:button="@null"
            android:gravity="center"
            android:text="@{viewModel.buttonText}"
            android:textColor="@color/white"
            android:textSize="@dimen/t3"
            app:onClickCommand="@{viewModel.startCommand}"
            tools:text="@string/start_focus"/>
    </LinearLayout>
</layout>